k8s_manifests/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-mysql
  labels:
    app: wiki
spec:
  ports:
    - port: 3306
  selector:
    app: wiki
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-mysql
  labels:
    app: wiki
spec:
  selector:
    matchLabels:
      app: wiki
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wiki
        tier: mysql
    spec:
      containers:
      - image: image_variable
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: wiki-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: wiki-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: wiki-mysql-pv-claim
