k8s_manifests/wiki-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  labels:
    app: wiki
spec:
  ports:
    - port: 80
  selector:
    app: wiki
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  labels:
    app: wiki
spec:
  selector:
    matchLabels:
      app: wiki
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wiki
        tier: frontend
    spec:
      containers:
      - image: redman27/wiki:6
        name: wiki
        ports:
        - containerPort: 80
          name: wiki
        volumeMounts:
        - name: wiki-persistent-storage
          mountPath: /var/www/data
      volumes:
      - name: wiki-persistent-storage
        persistentVolumeClaim:
          claimName: wiki-web-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wiki-web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "wiki.k8s-14.sa"
spec:
  rules:
    - host: wiki.k8s-13.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki
                port:
                  number: 80
